--- a/veni-divi-demo/src/main/AndroidManifest.xml
+++ b/veni-divi-demo/src/main/AndroidManifest.xml
@@ -6,12 +6,14 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name">
 
-        <activity android:name=".DefaultLookActivity">
+        <activity android:name=".StartActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".DefaultLookActivity" />
+        <activity android:name=".FragmentsInBackStackActivity" />
 
     </application>
 
