--- a/veni-divi-demo/src/main/AndroidManifest.xml
+++ b/veni-divi-demo/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         </activity>
         <activity android:name=".DefaultLookActivity" />
         <activity android:name=".FragmentsInBackStackActivity" />
+        <activity android:name=".ConfigurationOptionsActivity" />
 
     </application>
 
